<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".QuizActivity">

    <LinearLayout
        android:id="@+id/linearLayoutQuiz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGrey"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/QuestionTextView"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="10dp"
            android:text="@string/QuestionTxt"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/Answer1Button"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/Answer1Txt" />

        <Button
            android:id="@+id/Answer2Button"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/Answer2Txt" />

        <Button
            android:id="@+id/Answer3Button"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/Answer3Txt" />

        <Button
            android:id="@+id/Answer4Button"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/Answer4Txt" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/black"
            android:text="@string/nextBtn" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>