<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".YourScore">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGrey"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ScoreTxt"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/purple_500"
            android:gravity="center"
            android:text="@string/scoreTxt"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/yourNameId"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="10dp"
            android:text="@string/yourName"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/YourScoreTxt"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/YourScoreTxt"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/FinalScore"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/FinalScoreTxt"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/PlayAgainBtn"
            android:layout_width="133dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/PlayAgainTxt" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>